clean up, documentation, added sync checking to avoid race clobbering.
